test/conformance/chainsaw/validate/clusterpolicy/standard/cel-deprecated/parameter-resources/namespaced/set-paramref-namespace/replicaLimit.yaml
apiVersion: rules.example.com/v1
kind: DeploymentReplicaLimit
metadata:
  name: "replica-limit"
  namespace: testing-02
maxReplicas: 3
