test/conformance/chainsaw/validate/clusterpolicy/standard/cel-deprecated/parameter-resources/namespaced/set-paramref-namespace/crd-assert.yaml
apiVersion: apiextensions.k8s.io/v1
kind: CustomResourceDefinition
metadata:
  name: deploymentreplicalimits.rules.example.com
status:
  acceptedNames:
    kind: DeploymentReplicaLimit
    plural: deploymentreplicalimits
  storedVersions:
  - v1
