test/conformance/chainsaw/validate/clusterpolicy/standard/cel-deprecated/parameter-resources/namespaced/set-paramref-namespace/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: set-paramref-namespace
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: ns.yaml
    - assert:
        file: ns.yaml
  - name: step-02
    try:
    - apply:
        file: crd.yaml
    - assert:
        file: crd-assert.yaml
    - apply:
        file: permissions.yaml
  - name: step-03
    try:
    - apply:
        file: replicaLimit.yaml
    - assert:
        file: replicaLimit.yaml
  - name: create policy
    use:
      template: ../../../../../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait policy ready
    use:
      template: ../../../../../../../_step-templates/cluster-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: check-deployment-replicas-01
  - name: step-05
    try:
    - apply:
        file: deployment-pass.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: deployment-fail.yaml
  # cleanup context deadline exceeded
